--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -232,11 +232,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69d0b740",
+   "execution_count": 31,
+   "id": "3ac04e74",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "student_names = studentscsv['student_name'].tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e40a2e19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefixes_suffixes = [\"Dr. \", \"Mr. \",\"Ms. \", \"Mrs. \", \"Miss \", \" MD\", \" DDS\", \" DVM\", \" PhD\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "45eeb890",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\carlkenedy12\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in prefixes_suffixes:\n",
+    "    studentscsv[\"student_name\"] = studentscsv[\"student_name\"].str.replace(word,\"\")\n"
+   ]
   }
  ],
  "metadata": {
